--- a/System_Integrator.html
+++ b/System_Integrator.html
@@ -10,7 +10,9 @@
     <meta name="keywords" content="" />
     <!-- //Meta tag Keywords -->
     <!-- Custom-Files -->
-    <link rel="stylesheet" href="css/bootstrap.css">
+     <link rel="stylesheet" href="css/bootstrap.css">
+    <!-- animations  -->
+    <link rel="stylesheet" href="css/animate.css">
     <!-- Bootstrap-Core-CSS -->
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
     <!-- Style-CSS -->
@@ -50,8 +52,9 @@
                                 <a href="#">services <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                 <input type="checkbox" id="drop-2" />
                                 <ul>
-                                    <li><a href="System_Integrator.html" class="drop-text">Manged Services</a></li>
-                                    <li><a href="Managed_Services.html" class="drop-text">Network & DC Solution</a></li>
+                                    <li><a href="Managed_Services.html" class="drop-text">Managed Services</a></li>
+                                    <li><a href="System_Integrator.html" class="drop-text">Network & DC Solution</a>
+                                    </li>
                                     <li><a href="IT_Consultancy.html" class="drop-text"> Project Management Consultancy
                                         </a></li>
                                     <li><a href="Contact_Center.html" class="drop-text"> Cyber Security Services</a>
@@ -60,18 +63,18 @@
                                     <li><a href="vue.html" class="drop-text">VUE Center</a></li>
                                 </ul>
                             </li>
-                           
+
                             <li>
                                 <label for="drop-2" class="toggle toggle-2">Partner <span class="fa fa-angle-down"
                                         aria-hidden="true"></span> </label>
                                 <a href="#">Partner <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                 <input type="checkbox" id="drop-2" />
-                                <ul class="drop2" >
+                                <ul class="drop2">
                                     <li><a href="System_Integrator.html" class="drop-text">ASCITT</a></li>
                                     <li><a href="Managed_Services.html" class="drop-text">Green Circle</a></li>
                                     <li><a href="IT_Consultancy.html" class="drop-text"> VMWare </a></li>
                                 </ul>
-                                
+
                             </li>
                             <li><a href="contact.html">Contact Us</a></li>
                             <li><a href="contact.html">Customer</a></li>
@@ -117,17 +120,37 @@
     <section class="about py-5">
         <div class="container py-md-5">
             <div class="about-hny-info text-left pr-lg-5">
-                <h3 class="tittle-w3ls mb-3">System Integrator</h3>
-                <p class="sub-tittle mt-3 mb-4 pr-lg-5">
+                <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="1s"> Network & DC Solution</h3>
+                <!-- <p class="sub-tittle mt-3 mb-4 pr-lg-5">
                     As the industry’s premier technology integrator, we are also the leading provider of On Demand
                     Business infrastructures, affording our customers customized technology integration packages to
                     optimize their efficiency.
-                </p>
+                </p> -->
             </div>
             <div class="clear"></div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-7">
+                    <div class="col-lg-7 wow fadeInLeft " data-wow-duration="2s" >
+                        <p class="sub-tittle mt-3 mb-4 pr-lg-5 "  >
+                            From helping customers maximize performance and capability, to keeping IT integration costs
+                            down; we consult with our clients to tailor IT solutions and facilitate a smooth transition
+                            that optimizes existing IT investments. These services can span the
+                            entire lifespan of the technology; from assessment and strategy & design, to implementation
+                            and operational services.
+                        </p>
+                        <p> 
+                                Consult :
+                        </p>
+                        <p class="sub-tittle mt-3 mb-4 pr-lg-5">
+                            From helping customers maximize performance and capability, to keeping IT integration costs
+                            down; we consult with our clients to tailor IT solutions and facilitate a smooth transition
+                            that optimizes existing IT investments. These services can span the
+                            entire lifespan of the technology; from assessment and strategy & design, to implementation
+                            and operational services.
+                        </p>
+                        <p>
+                                Supply :                    
+                        </p>
                         <p class="sub-tittle mt-3 mb-4 pr-lg-5">
                             From helping customers maximize performance and capability, to keeping IT integration costs
                             down; we consult with our clients to tailor IT solutions and facilitate a smooth transition
@@ -137,30 +160,50 @@
                         </p>
                         <p>
 
-                            ELITEIT provides complete solutions and services that empower businesses to achieve seamless
-                            integration:
+                                Implement :
 
-                            <ul class="ul_for_list">
-                                <li>Cloud Services ( IaaS ,PaaS,SaaS)</li>
-                                <li>Security Solutions</li>
-                                <li>Business Continuity and Recovery Services</li>
-                                <li>Infrastructure and Systems Management Services</li>
-                                <li>Hardware Support Services</li>
-                                <li>Intel based Server Sales</li>
-                                <li>Clients, Printers and Kiosk Sales</li>
-                                <li>Retail Store Solution Sales</li>
-                            </ul>
+                        </p>
+                        <p class="sub-tittle mt-3 mb-4 pr-lg-5">
+                            From helping customers maximize performance and capability, to keeping IT integration costs
+                            down; we consult with our clients to tailor IT solutions and facilitate a smooth transition
+                            that optimizes existing IT investments. These services can span the
+                            entire lifespan of the technology; from assessment and strategy & design, to implementation
+                            and operational services.
+                        </p>
+                        <p>
+
+                                Manage :
+
+                        </p>
+                        <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
+                            From helping customers maximize performance and capability, to keeping IT integration costs
+                            down; we consult with our clients to tailor IT solutions and facilitate a smooth transition
+                            that optimizes existing IT investments. These services can span the
+                            entire lifespan of the technology; from assessment and strategy & design, to implementation
+                            and operational services.
+                        </p>
+                        <p>
+
+                                Operate :
+
+                        </p>
+                        <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
+                            From helping customers maximize performance and capability, to keeping IT integration costs
+                            down; we consult with our clients to tailor IT solutions and facilitate a smooth transition
+                            that optimizes existing IT investments. These services can span the
+                            entire lifespan of the technology; from assessment and strategy & design, to implementation
+                            and operational services.
                         </p>
                     </div>
                     <div class="col-lg-5">
-                        <div class="img_info_des">
+                        <div class="img_info_des  wow fadeInLeft " data-wow-duration="2s" >
                             <img src="images/banner2.jpg" alt=" " class="img-fluid mt-5">
                         </div>
                     </div>
 
 
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                     <p class="sub-tittle mt-3 mb-4 pr-lg-5">
                         Operational efficiency and business resiliency address these customers’ needs and become entry
                         points to On Demand business. In times of tight budgets, businesses need to increase the value
@@ -171,7 +214,7 @@
                         operations. ITS can help customers make the improvements necessary to start the On Demand
                         journey.
                     </p>
-                </div>
+                </div> -->
             </div>
 
         </div>
@@ -290,6 +333,12 @@
 
     </div>
     <!-- //copyright -->
+
+
+
+    <script src="js/wow.min.js"></script>
+
+    <script> new WOW().init(); </script>
 
 </body>
 
