--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,9 @@
     <meta name="keywords" content="" />
     <!-- //Meta tag Keywords -->
     <!-- Custom-Files -->
-    <link rel="stylesheet" href="css/bootstrap.css">
+     <link rel="stylesheet" href="css/bootstrap.css">
+    <!-- animations  -->
+    <link rel="stylesheet" href="css/animate.css">
     <!-- Bootstrap-Core-CSS -->
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
     <!-- Style-CSS -->
@@ -53,8 +55,8 @@
                                 <a href="#">services <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                 <input type="checkbox" id="drop-2" />
                                 <ul>
-                                    <li><a href="System_Integrator.html" class="drop-text">Manged Services</a></li>
-                                    <li><a href="Managed_Services.html" class="drop-text">Network & DC Solution</a></li>
+                                    <li><a href="Managed_Services.html" class="drop-text">Managed Services</a></li>
+                                    <li><a href="System_Integrator.html" class="drop-text">Network & DC Solution</a></li>
                                     <li><a href="IT_Consultancy.html" class="drop-text"> Project Management Consultancy
                                         </a></li>
                                     <li><a href="Contact_Center.html" class="drop-text"> Cyber Security Services</a>
@@ -281,6 +283,12 @@
 
     </div>
     <!-- //copyright -->
+
+
+
+    <script src="js/wow.min.js"></script>
+
+    <script> new WOW().init(); </script>
     <script src="js/wow.min.js"></script>
 
     <script> new WOW().init(); </script>
