--- a/error.html
+++ b/error.html
@@ -26,7 +26,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </script>
     <!-- //Meta tag Keywords -->
     <!-- Custom-Files -->
-    <link rel="stylesheet" href="css/bootstrap.css">
+     <link rel="stylesheet" href="css/bootstrap.css">
+    <!-- animations  -->
+    <link rel="stylesheet" href="css/animate.css">
     <!-- Bootstrap-Core-CSS -->
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
     <!-- Style-CSS -->
@@ -234,6 +236,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
     </div>
     <!-- //copyright -->
+
+
+
+    <script src="js/wow.min.js"></script>
+
+    <script> new WOW().init(); </script>
 
 </body>
 
