--- a/projectDetials.html
+++ b/projectDetials.html
@@ -12,7 +12,9 @@
     <meta name="keywords" content="" />
     <!-- //Meta tag Keywords -->
     <!-- Custom-Files -->
-    <link rel="stylesheet" href="css/bootstrap.css">
+     <link rel="stylesheet" href="css/bootstrap.css">
+    <!-- animations  -->
+    <link rel="stylesheet" href="css/animate.css">
     <!-- Bootstrap-Core-CSS -->
     <link rel="stylesheet" type="text/css" href="engine1/style.css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
@@ -54,8 +56,8 @@
                                 <a href="#">services <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                 <input type="checkbox" id="drop-2" />
                                 <ul>
-                                    <li><a href="System_Integrator.html" class="drop-text">Manged Services</a></li>
-                                    <li><a href="Managed_Services.html" class="drop-text">Network & DC Solution</a></li>
+                                    <li><a href="Managed_Services.html" class="drop-text">Managed Services</a></li>
+                                    <li><a href="System_Integrator.html" class="drop-text">Network & DC Solution</a></li>
                                     <li><a href="IT_Consultancy.html" class="drop-text"> Project Management Consultancy
                                         </a></li>
                                     <li><a href="Contact_Center.html" class="drop-text"> Cyber Security Services</a>
@@ -291,6 +293,12 @@
 
     </div>
     <!-- //copyright -->
+
+
+
+    <script src="js/wow.min.js"></script>
+
+    <script> new WOW().init(); </script>
     <script type="text/javascript" src="engine1/jquery.js"></script>
     <script type="text/javascript" src="engine1/wowslider.js"></script>
     <script type="text/javascript" src="engine1/script.js"></script>
