--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                                         </a></li>
                                     <li><a href="Contact_Center.html" class="drop-text"> Cyber Security Services</a>
                                     </li>
-                                    <li><a href="Training_Center.html" class="drop-text"> Mobile Apps </a></li>
+                                    <li><a href="mopile app.html" class="drop-text"> Mobile Apps </a></li>
                                     <li><a href="vue.html" class="drop-text">VUE Center</a></li>
                                 </ul>
                             </li>
