--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 <li><a href="IT_Consultancy.html" class="drop-text"> Project Management Consultancy </a>
                                 </li>
                                 <li><a href="Contact_Center.html" class="drop-text"> Cyber Security Services</a></li>
-                                <li><a href="Training_Center.html" class="drop-text"> Mobile Apps </a></li>
+                                <li><a href="mobile app.html" class="drop-text"> Mobile Apps </a></li>
                                 <li><a href="vue.html" class="drop-text">VUE Center</a></li>
                             </ul>
                         </li>
