--- a/error.html
+++ b/error.html
@@ -81,7 +81,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <li><a href="contact.html">Contact Us</a></li>
 <li><a href="contact.html">Customer</a></li>
 <li><a href="contact.html">Career</a></li>
-<li><a href="contact.html">News</a></li>
+<li><a href="news.html">News</a></li>
 
                             <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span class="fa fa-facebook-official" aria-hidden="true"></span>
                                     <div class="tooltip">Facebook</div>
