--- a/index.html
+++ b/index.html
@@ -45,20 +45,19 @@
                     <input type="checkbox" id="drop" />
                     <ul class="menu mr-auto">
                         <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="about.html" target="_blank" >About Us</a></li>
                         <li>
-                            <label for="drop-2" class="toggle toggle-2">services <span class="fa fa-angle-down"
+                            <label for="drop-2" class="toggle toggle-2"   >services <span class="fa fa-angle-down"
                                     aria-hidden="true"></span> </label>
                             <a href="#">services <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                             <input type="checkbox" id="drop-2" />
                             <ul>
-                                <li><a href="Managed_Services.html" class="drop-text">Managed Services</a></li>
-                                <li><a href="System_Integrator.html" class="drop-text">Network & DC Solution</a></li>
-                                <li><a href="IT_Consultancy.html" class="drop-text"> Project Management Consultancy </a>
-                                </li>
-                                <li><a href="Contact_Center.html" class="drop-text"> Cyber Security Services</a></li>
-                                <li><a href="mobile app.html" class="drop-text"> Mobile Apps </a></li>
-                                <li><a href="vue.html" class="drop-text">VUE Center</a></li>
+                                <li><a href="Managed_Services.html" target="_blank" class="drop-text">Managed Services</a></li>
+                                <li><a href="System_Integrator.html" target="_blank" class="drop-text">Network & DC Solution</a></li>
+                                <li><a href="IT_Consultancy.html" target="_blank" class="drop-text"> Project Management Consultancy </a></li>
+                                <li><a href="Contact_Center.html" target="_blank" class="drop-text"> Cyber Security Services</a></li>
+                                <li><a href="mobile app.html" target="_blank" class="drop-text"> Mobile Apps </a></li>
+                                <li><a href="vue.html" target="_blank" class="drop-text">VUE Center</a></li>
                             </ul>
                         </li>
                         <li>
@@ -67,15 +66,16 @@
                             <a href="#">Partner <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                             <input type="checkbox" id="drop-2" />
                             <ul class="drop2">
-                                <li><a href="System_Integrator.html" class="drop-text">VMWare</a></li>
-                                <li><a href="Training_Center.html" class="drop-text"> Green Circle </a></li>
-                                <li><a href="vue.html" class="drop-text">ASCITT</a></li>
+                                <li><a href="System_Integrator.html" target="_blank" class="drop-text">VMWare</a></li>
+                                <li><a href="Training_Center.html" target="_blank" class="drop-text"> Green Circle </a></li>
+                                <li><a href="vue.html" class="drop-text" target="_blank" >ASCITT</a></li>
                             </ul>
                         </li>
-                        <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="contact.html">Customer</a></li>
-                        <!-- <li><a href="contact.html">Career</a></li> -->
-                        <li><a href="contact.html">News</a></li>
+                        
+                        <li><a href="contact.html" target="_blank">Customer</a></li>
+                        <li><a href="news.html" target="_blank" >News</a></li>
+                        <!-- <li><a href="contact.html" target="_blank" >Career</a></li> -->
+                        <li><a href="contact.html" target="_blank" >Contact Us</a></li>
 
                         <!--  <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
                                     class="fa fa-facebook-official" aria-hidden="true"></span>
@@ -409,14 +409,14 @@
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/banner2.jpg" alt="">
-                                <h3> System Integrator</h3>
+                                <h3> Managed Services</h3>
                             </div>
                         </div>
                         <div class="face face2">
                             <div class="content">
 
-                                <a href="System_Integrator.html" class="btn btn-primary">Detials</a>
-                                <a href="contact.html" class="btn btn-info">Order Now</a>
+                                <a href="Managed_Services.html" target="_blnak"  class="btn btn-primary">Detials</a>
+                                <a href="contact.html" target="_blnak" class="btn btn-info">Order Now</a>
                             </div>
                         </div>
                     </div>
@@ -426,14 +426,14 @@
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/banner1.jpg" alt="">
-                                <h3> Networking & Security</h3>
+                                <h3> Network & DC Solution</h3>
                             </div>
                         </div>
                         <div class="face face2">
                             <div class="content">
 
-                                <a href="Managed_Services.html" class="btn btn-primary">Detials</a>
-                                <a href="contact.html" class="btn btn-info">Order Now</a>
+                                <a href="System_Integrator.html" target="_blank" class="btn btn-primary">Detials</a>
+                                <a href="contact.html" target="_blank" class="btn btn-info">Order Now</a>
                             </div>
                         </div>
                     </div>
@@ -443,14 +443,14 @@
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/ab.jpg" alt="">
-                                <h3> IT Consultancy Services </h3>
+                                <h3> Project Management Consultancy </h3>
                             </div>
                         </div>
                         <div class="face face2">
                             <div class="content">
 
-                                <a href="IT_Consultancy.html" class="btn btn-primary">Detials</a>
-                                <a href="contact.html" class="btn btn-info">Order Now</a>
+                                <a href="IT_Consultancy.html" target="_blank" class="btn btn-primary">Detials</a>
+                                <a href="contact.html" target="_blank" class="btn btn-info">Order Now</a>
                             </div>
                         </div>
                     </div>
@@ -477,14 +477,14 @@
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/banner2.jpg" alt="">
-                                <h3> Training Center </h3>
+                                <h3> Mobile Apps </h3>
                             </div>
                         </div>
                         <div class="face face2">
                             <div class="content">
 
-                                <a href="Training_Center.html" class="btn btn-primary">Detials</a>
-                                <a href="contact.html" class="btn btn-info">Order Now</a>
+                                <a href="mobile app.html" target="_blank" class="btn btn-primary">Detials</a>
+                                <a href="contact.html" target="_blank" class="btn btn-info">Order Now</a>
                             </div>
                         </div>
                     </div>
