--- a/contact.html
+++ b/contact.html
@@ -76,10 +76,10 @@
                                     <li><a href="IT_Consultancy.html" class="drop-text"> VMWare </a></li>
                                 </ul>
                             </li>
-                            <li class="active"><a href="#">Contact Us</a></li>
-                            <li><a href="contact.html">Customer</a></li>
-                            <!-- <li><a href="contact.html">Career</a></li> -->
-                            <li><a href="contact.html">News</a></li>
+                            <li><a href="contact.html" target="_blank">Customer</a></li>
+                        <li><a href="news.html" target="_blank" >News</a></li>
+                        <!-- <li><a href="contact.html" target="_blank" >Career</a></li> -->
+                        <li><a href="contact.html" target="_blank" >Contact Us</a></li>
 
                             <!-- <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
                                         class="fa fa-facebook-official" aria-hidden="true"></span>
