--- a/index.html
+++ b/index.html
@@ -460,14 +460,14 @@
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/ab.jpg" alt="">
-                                <h3> Contact Center </h3>
+                                <h3> 	Cyber Security Services </h3>
                             </div>
                         </div>
                         <div class="face face2">
                             <div class="content">
 
-                                <a href="Contact_Center.html" class="btn btn-primary">Detials</a>
-                                <a href="contact.html" class="btn btn-info">Order Now</a>
+                                <a href="Contact_Center.html" target="_blank" class="btn btn-primary">Detials</a>
+                                <a href="contact.html" target="_blank" class="btn btn-info">Order Now</a>
                             </div>
                         </div>
                     </div>
@@ -494,14 +494,14 @@
                         <div class="face face1">
                             <div class="content">
                                 <img src="images/banner3.jpg" alt="">
-                                <h3> VUE </h3>
+                                <h3> VUE Center </h3>
                             </div>
                         </div>
                         <div class="face face2">
                             <div class="content">
 
-                                <a href="vue.html" class="btn btn-primary">Detials</a>
-                                <a href="contact.html" class="btn btn-info">Order Now</a>
+                                <a href="vue.html" target="_blank" class="btn btn-primary">Detials</a>
+                                <a href="contact.html" target="_blank" class="btn btn-info">Order Now</a>
                             </div>
                         </div>
                     </div>
