--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                     <div id="logo">
                         <h1>
                             <a class="navbar-brand px-0 mx-0 logo1 " href="index.html">
-                                <img src="images/logo/Elite logo .png" alt="">
-
+                               
+                                
+                                <img src="images/logo/Artboard 52.png" alt="">
                             </a>
                         </h1>
                     </div>
@@ -150,11 +151,11 @@
         <!-- //banner slider -->
     </div>
     <!-- //banner -->
-    <svg class="Section-curve-about" viewBox="0 0 100 5">
+    <!-- <svg class="Section-curve-about" viewBox="0 0 100 5">
         <path fill="#fff"
             d="M100,0 L100,5 L-2.42861287e-17,5 L-1.11022302e-16,0 C-1.11022302e-16,0 25,5 50,5 C75,5 100,0 100,0 Z">
         </path>
-    </svg>
+    </svg> -->
     <!-- //home -->
 
     <!-- about -->
@@ -573,7 +574,7 @@
 
                     <h2>
                         <a class="navbar-brand px-0 mx-0 mb-4  " href="index.html">
-                            <img src="images/logo/Elite favicon.png" alt="">
+                            <img src="images/logo/Artboard 52 copy.png" alt="">
 
                         </a>
                     </h2>
