--- a/news.html
+++ b/news.html
@@ -39,7 +39,8 @@
                         <div id="logo">
                             <h1>
                                 <a class="navbar-brand px-0 mx-0 logo1" href="index.html">
-                                    <img src="images/logo/Elite logo .png" alt="">
+                                    <!-- <img src="images/logo/Elite logo .png" alt=""> -->
+                                <img src="images/logo/Artboard 52.png" alt="">
 
                                 </a>
                             </h1>
@@ -251,7 +252,7 @@
 
                     <h2>
                         <a class="navbar-brand px-0 mx-0 mb-4" href="index.html">
-                            <img src="images/logo/Elite favicon.png" alt="">
+                            <img src="images/logo/Artboard 52 copy.png" alt="">
 
                         </a>
                     </h2>
