--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="" />
     <!-- //Meta tag Keywords -->
     <!-- Custom-Files -->
-     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <!-- animations  -->
     <link rel="stylesheet" href="css/animate.css">
     <!-- Bootstrap-Core-CSS -->
@@ -38,7 +38,7 @@
                             <h1>
                                 <a class="navbar-brand px-0 mx-0 logo1" href="index.html">
                                     <!-- <img src="images/logo/Elite logo .png" alt=""> -->
-                                <img src="images/logo/Artboard 52.png" alt="">
+                                    <img src="images/logo/Artboard 52.png" alt="">
 
                                 </a>
                             </h1>
@@ -55,14 +55,15 @@
                                 <a href="#">services <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                 <input type="checkbox" id="drop-2" />
                                 <ul>
-                                    <li><a href="Managed_Services.html" class="drop-text">Managed Services</a></li>
-                                    <li><a href="System_Integrator.html" class="drop-text">Network & DC Solution</a></li>
-                                    <li><a href="IT_Consultancy.html" class="drop-text"> Project Management Consultancy
-                                        </a></li>
-                                    <li><a href="Contact_Center.html" class="drop-text"> Cyber Security Services</a>
+                                    <li><a href="Managed_Services.html" target="_blank" class="drop-text">Managed Services</a></li>
+                                    <li><a href="System_Integrator.html"  target="_blank" class="drop-text">Network & DC Solution</a>
                                     </li>
-                                    <li><a href="mobile app.html" class="drop-text"> Mobile Apps </a></li>
-                                    <li><a href="vue.html" class="drop-text">VUE Center</a></li>
+                                    <li><a href="IT_Consultancy.html" target="_blank"  class="drop-text"> Project Management Consultancy
+                                        </a></li> 
+                                    <li><a href="Contact_Center.html" target="_blank" class="drop-text"> Cyber Security Services</a>
+                                    </li>
+                                    <li><a href="mobile app.html"  target="_blank" class="drop-text"> Mobile Apps </a></li>
+                                    <li><a href="vue.html" target="_blank"  class="drop-text">VUE Center</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -70,16 +71,16 @@
                                         aria-hidden="true"></span> </label>
                                 <a href="#">Partner <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                 <input type="checkbox" id="drop-2" />
-                                <ul class="drop2" >
-                                    <li><a href="System_Integrator.html" class="drop-text">ASCITT</a></li>
-                                    <li><a href="Managed_Services.html" class="drop-text">Green Circle</a></li>
-                                    <li><a href="IT_Consultancy.html" class="drop-text"> VMWare </a></li>
+                                <ul class="drop2">
+                                    <li><a href="#" class="drop-text">ASCITT</a></li>
+                                    <li><a href="#" class="drop-text">Green Circle</a></li>
+                                    <li><a href="#" class="drop-text"> VMWare </a></li>
                                 </ul>
                             </li>
-                            <li><a href="contact.html" target="_blank">Customer</a></li>
-                        <li><a href="news.html" target="_blank" >News</a></li>
-                        <!-- <li><a href="contact.html" target="_blank" >Career</a></li> -->
-                        <li><a href="contact.html" target="_blank" >Contact Us</a></li>
+                            <li><a href="#">Customer</a></li>
+                            <li><a href="#">News</a></li>
+                            <!-- <li><a href="contact.html" target="_blank" >Career</a></li> -->
+                            <li><a href="contact.html" target="_blank">Contact Us</a></li>
 
                             <!-- <li class="social-icons ml-lg-3"><a href="#" class="p-0 social-icon"><span
                                         class="fa fa-facebook-official" aria-hidden="true"></span>
@@ -124,10 +125,11 @@
                 <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="1s"><span class="pink">Who</span> We Are
                 </h3>
                 <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
-                    Premium Security Electronics is a National Saudi Company, Partners and Authorized Distributors for
-                    many of the International Brands in the Field of Communications and Networking, we offer all the
-                    technical solutions for Low current Systems through a well-educated,
-                    trained Engineers and Technicians.
+                    Elite Networks Company, Saudi Company Founded by Saudi Entrepreneur to Introduce High Quality
+                    Services in Multiple Fields.
+                    We are Partners and Authorized Distributors for many of the International Brands in Different
+                    Industries
+
                 </p>
             </div>
 
@@ -142,11 +144,11 @@
                     <h3 class="tittle-w3ls mb-3 wow fadeInLeft " data-wow-duration="2s "><span class="pink">Our</span>
                         Vision</h3>
                     <p class="sub-tittle mt-3 mb-4 pr-lg-5 wow fadeInLeft " data-wow-duration="2s">
-                        We will Seek by the help of god to prove existence through our business and allianes with
+                        We will seek by the help of god to prove existence through our business and allianes with
                         national and international companies in order to achieve our goals and satisfy our customers and
                         commitment to the highest performance and the lowest cost according
                         to the schedule.
-                    </p>
+
                 </div>
 
             </div>
@@ -162,6 +164,7 @@
                     We are not alone but nique, Perfection is our goal deeloping and training are our way.
                     Offering customers our services and upgrading the level of technical and technology support to
                     provid a high quality alternatives in a low budgest is what we aim for.
+
                 </p>
             </div>
 
@@ -248,12 +251,12 @@
                 <div class="col-lg-4 mt-4 ad-info">
                     <h4 class="mb-4">Contact Info</h4>
                     <p><span class="fa fa-map-marker"></span>Saudi Arabia.</p>
-                    <p class="phone"><span class="fa fa-phone"></span> +966-594199990 </p>
-                    <p class="phone"><span class="fa fa-fax"></span> +966-163653000 </p>
-                    <p><span class="fa fa-envelope"></span><a href="mailto:info@Premium.com.sa">info@elite.com.sa</a>
+                    <p class="phone"><span class="fa fa-phone"></span> +966 55 299 9240</p>
+                    <p class="phone"><span class="fa fa-fax"></span> +966-0112490666 </p>
+                    <p><span class="fa fa-envelope"></span><a href="#">info@eliteksa.net</a>
                     </p>
                     <p><span class="fa fa-envelope"></span><a
-                            href="mailto:y.sharaf@Premium.com.sa">y.shara@elite.com.sa</a></p>
+                            href="#">sales@eliteksa.net</a></p>
                 </div>
 
             </div>
