--- a/vue.html
+++ b/vue.html
@@ -69,13 +69,13 @@
                                 <a href="#">Partner <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                 <input type="checkbox" id="drop-2" />
                                 <ul class="drop2">
-                                    <li><a href="System_Integrator.html" class="drop-text">ASCITT</a></li>
-                                    <li><a href="Managed_Services.html" class="drop-text">Green Circle</a></li>
-                                    <li><a href="IT_Consultancy.html" class="drop-text"> VMWare </a></li>
+                                    <li><a href="#" class="drop-text">ASCITT</a></li>
+                                    <li><a href="#" class="drop-text">Green Circle</a></li>
+                                    <li><a href="#" class="drop-text"> VMWare </a></li>
                                 </ul>
                             </li>
-                            <li><a href="contact.html" target="_blank">Customer</a></li>
-                        <li><a href="news.html" target="_blank" >News</a></li>
+                            <li><a href="#" >Customer</a></li>
+                        <li><a href="#"  >News</a></li>
                         <!-- <li><a href="contact.html" target="_blank" >Career</a></li> -->
                         <li><a href="contact.html" target="_blank" >Contact Us</a></li>
 
@@ -235,15 +235,15 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 mt-4 ad-info">
+               <div class="col-lg-4 mt-4 ad-info">
                     <h4 class="mb-4">Contact Info</h4>
                     <p><span class="fa fa-map-marker"></span>Saudi Arabia.</p>
-                    <p class="phone"><span class="fa fa-phone"></span> +966-594199990 </p>
-                    <p class="phone"><span class="fa fa-fax"></span> +966-163653000 </p>
-                    <p><span class="fa fa-envelope"></span><a href="mailto:info@Premium.com.sa">info@elite.com.sa</a>
+                    <p class="phone"><span class="fa fa-phone"></span> +966 55 299 9240</p>
+                    <p class="phone"><span class="fa fa-fax"></span> +966-0112490666 </p>
+                    <p><span class="fa fa-envelope"></span><a href="#">info@eliteksa.net</a>
                     </p>
                     <p><span class="fa fa-envelope"></span><a
-                            href="mailto:y.sharaf@Premium.com.sa">y.shara@elite.com.sa</a></p>
+                            href="#">sales@eliteksa.net</a></p>
                 </div>
 
             </div>
